examples/test/testpolicy16919.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16919
  namespace: namespace321
spec:
  podSelector:
    matchLabels:
      key46: value27
      key39: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value9
      podSelector:
        matchLabels:
          key22: value48
          key35: value12
          key16: value47
